Fix - Gutenberg alignment issue on blog page

--- a/style.css
+++ b/style.css
@@ -1382,6 +1382,7 @@ img.header-image {
 .no-sidebar .alignfull {
 	margin-left: calc(50% - 50vw);
 	margin-right: calc(50% - 50vw);
+	max-width: unset;
 }
 
 .no-sidebar-full-width .alignwide,
